--- a/Observaciones/Secciones/Observatorio.tex
+++ b/Observaciones/Secciones/Observatorio.tex
@@ -1,4 +1,4 @@
-\section{Observatorio Astronómico Universitario - Iturbide}
+\section{Observatorio Astronómico Universitario - Iturbide} \label{muestra:observaciones:oau}
 
 El \textbf{Observatorio Astronómico Universitario - Iturbide} (el cual de ahora
 en adelante será referido como el OAU), ubicado en el cerro Picacho en el
@@ -33,7 +33,8 @@ Frente al CCD va equipado una rueda de filtros \textbf{ZWO
 la cual puede ser equipada con 7 filtros distintos. Para las observaciones
 recabadas en este trabajo, utilizamos solamente el filtro \textbf{Luminance}, el
 cual se aproxima a la región del visible del espectro electromagnético
-(\reffigure{zwoFilterTransmissionCurve}). 
+(\reffigure{zwoFilterTransmissionCurve}, obtenida de la página comercial de
+ZWO\footnote{\url{https://astronomy-imaging-camera.com/product/zwo-lrgb-36mm-filters/}}). 
 
 \begin{figure}[!ht]
 	\centering
@@ -41,7 +42,6 @@ cual se aproxima a la región del visible del espectro electromagnético
 	\caption{Curva de transmisión de filtros de ZWO. El filtro de
 	\textbf{Luminance} se encuentra como la curva negra, abarcando todo el
 	espectro visible, desde los 400nm hasta 700nm. Gráfica obtenida de la
-	\href{https://astronomy-imaging-camera.com/product/zwo-lrgb-36mm-filters/}{página
-	de productos de ZWO}.}
+	página de productos de ZWO.}
 	\label{zwoFilterTransmissionCurve}
 \end{figure}
