--- a/ref.bib
+++ b/ref.bib
@@ -767,3 +767,36 @@ ADS Bibcode: 1959cbs..book.....K},
 	langid = {english},
 	note = {Publisher: The Astronomical Society of the Pacific}
 }
+
+@misc{smith_cataclysmic_variables_review_2007,
+	title = {Cataclysmic Variables},
+	url = {http://arxiv.org/abs/astro-ph/0701654},
+	doi = {10.48550/arXiv.astro-ph/0701654},
+	abstract = {Cataclysmic variables are binary stars in which a relatively normal star is transferring mass to its compact companion. This interaction gives rise to a rich range of behaviour, of which the most noticeable are the outbursts that give the class its name. Novae belong to the class, as do the less well known dwarf novae and magnetic systems. Novae draw their energy from nuclear reactions, while dwarf novae rely on gravity to power their smaller eruptions. All the different classes of cataclysmic variable can be accommodated within a single framework and this article will describe the framework, review the properties of the main types of system and discuss models of the outbursts and of the long-term evolution.},
+	number = {{arXiv}:astro-ph/0701654},
+	publisher = {{arXiv}},
+	author = {Smith, Robert Connon},
+	urldate = {2024-07-03},
+	date = {2007-01-23},
+	eprinttype = {arxiv},
+	eprint = {astro-ph/0701654},
+	keywords = {Astrophysics}
+}
+
+@article{chen_ztf_catalog_periodic_variable_stars_2020,
+	title = {The Zwicky Transient Facility Catalog of Periodic Variable Stars},
+	volume = {249},
+	issn = {0067-0049},
+	url = {https://dx.doi.org/10.3847/1538-4365/ab9cae},
+	doi = {10.3847/1538-4365/ab9cae},
+	abstract = {The number of known periodic variables has grown rapidly in recent years. Thanks to its large field of view and faint limiting magnitude, the Zwicky Transient Facility ({ZTF}) offers a unique opportunity to detect variable stars in the northern sky. Here, we exploit {ZTF} Data Release 2 ({DR}2) to search for and classify variables down to r ∼ 20.6 mag. We classify 781,602 periodic variables into 11 main types using an improved classification method. Comparison with previously published catalogs shows that 621,702 objects (79.5\%) are newly discovered or newly classified, including ∼700 Cepheids, ∼5000 {RR} Lyrae stars, ∼15,000 δ Scuti variables, ∼350,000 eclipsing binaries, ∼100,000 long-period variables, and about 150,000 rotational variables. The typical misclassification rate and period accuracy are on the order of 2\% and 99\%, respectively. 74\% of our variables are located at Galactic latitudes, . This large sample of Cepheids, {RR} Lyrae, δ Scuti stars, and contact ({EW}-type) eclipsing binaries is helpful to investigate the Galaxy’s disk structure and evolution with an improved completeness, areal coverage, and age resolution. Specifically, the northern warp and the disk’s edge at distances of 15–20 kpc are significantly better covered than previously. Among rotational variables, {RS} Canum Venaticorum and {BY} Draconis-type variables can be separated easily. Our knowledge of stellar chromospheric activity would benefit greatly from a statistical analysis of these types of variables.},
+	pages = {18},
+	number = {1},
+	journaltitle = {The Astrophysical Journal Supplement Series},
+	shortjournal = {{ApJS}},
+	author = {Chen, Xiaodian and Wang, Shu and Deng, Licai and Grijs, Richard de and Yang, Ming and Tian, Hao},
+	urldate = {2024-05-17},
+	date = {2020-07},
+	langid = {english},
+	note = {Publisher: The American Astronomical Society}
+}
